# NeuralNet-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cfg
src/: config_context.h  fileHandling.c  helpers.c  main.c  main.h
